--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.3",
     "react-scripts": "4.0.3",
-    "sheetjs": "^2.0.0",
-    "web-vitals": "^1.1.2",
-    "xlsx": "^0.18.0"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
