--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "axios": "^0.24.0",
     "dotenv": "^8.2.0",
     "materialize-css": "^1.0.0-rc.2",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
+    "mobx-utils": "^6.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.3",
